# simplewc

./: ChangeLog  LICENSE  Makefile  README.md  layer.c  layer.h  main.c  meson.build  meson_options.txt  seat.c  server.h  simpleway  simplewc.desktop  swc.desktop  xdg.c
config/: autostart.sh  configrc
include/: action.h  client.h  globals.h  input.h  ipc.h  layer.h  output.h  seat.h  server.h  xdg.h  xwayland.h
protocols/: dwl-ipc-unstable-v2.xml
src/: action.c  client.c  config.c  input.c  ipc.c  layer.c  main.c  output.c  seat.c  server.c  xdg.c  xwayland.c
util/: simplewc-msg.c  swc-msg.c
